2008-06-25  Brandon Sneed  <nivenh@sourceware.org>

	* include/winbase.h (InterlockedIncrement, InterlockedDecrement,
	InterlockedCompareExchange, InterlockedExchange, 
	InterlockedCompareExchangePointer, InterlockedExchangeAdd,
	InterlockedExchangePointer): Modified from PLONG to LONG volatile *.

2008-06-20  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/ddk/hal.def (HalTranslateBusAddress): Correct suffix.
	* lib/ddk/ntoskrnl.def (MmAllocateContiguousMemory): Correct suffix.
	Bug reported by Brian Hawley.

2008-06-17  Corinna Vinschen  <corinna@vinschen.de>

	* include/dsgetdc.h (DS_FORCE_REDISCOVERY, DS_FORCE_REDISCOVERY,
	DS_DIRECTORY_SERVICE_REQUIRED, DS_DIRECTORY_SERVICE_PREFERRED,
	DS_GC_SERVER_REQUIRED, DS_PDC_REQUIRED, DS_BACKGROUND_ONLY,
	DS_IP_REQUIRED, DS_KDC_REQUIRED, DS_TIMESERV_REQUIRED,
	DS_WRITABLE_REQUIRED, DS_GOOD_TIMESERV_PREFERRED, DS_AVOID_SELF,
	DS_ONLY_LDAP_NEEDED, DS_IS_FLAT_NAME, DS_IS_DNS_NAME,
	DS_RETURN_DNS_NAME, DS_RETURN_FLAT_NAME): Define.
	(DsGetDcNameW, DsGetDcNameA): Declare.
	(DsGetDcName): Define.
	* lib/netapi32.def (DsGetDcNameA, DsGetDcNameW): Export.

2008-05-28  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/commctrl.h (NMLVODSTATECHANGE): Define.

	Thanks to Tim Kosse <botg at users dot sf dot net>.

2008-05-28  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/winnt.h (SUBLANG_TIBETAN_BHUTAN): Fix definition.

	Thanks to Nicola Di Nisio <nicoladinisio at users dot sf dot net>.

2008-05-15  Corinna Vinschen  <corinna@vinschen.de>

	* include/winnt.h (FILE_SEQUENTIAL_WRITE_ONCE): Define.
	(FILE_SUPPORTS_TRANSACTIONS): Define.

2008-05-01  Bart Oldeman  <bartoldeman@users.sf.net>

	* include/winuser.h (DEVICE_NOTIFY_WINDOW_HANDLE,
	DEVICE_NOTIFY_SERVICE_HANDLE): remove duplicate definition.

2008-05-02  Ramiro Polla  <ramiro@lisha.ufsc.br>

	* include/vfw.h (WM_CAP_SET_CALLBACK_ERRORA, WM_CAP_SET_CALLBACK_ERRORW,
	WM_CAP_SET_CALLBACK_STATUS, WM_CAP_SET_CALLBACK_YIELD,