@@ -1499,7 +1499,7 @@ WINBASEAPI BOOL WINAPI GetPrivateProfileStructA(LPCSTR,LPCSTR,LPVOID,UINT,LPCSTR
 WINBASEAPI BOOL WINAPI GetPrivateProfileStructW(LPCWSTR,LPCWSTR,LPVOID,UINT,LPCWSTR);
 WINBASEAPI FARPROC WINAPI GetProcAddress(HINSTANCE,LPCSTR);
 WINBASEAPI BOOL WINAPI GetProcessAffinityMask(HANDLE,PDWORD,PDWORD);
-#if (_WIN32_WINNT >= 0x0502)
+#if (_WIN32_WINNT >= 0x0501)
 WINBASEAPI BOOL WINAPI GetProcessHandleCount(HANDLE,PDWORD);
 #endif
 WINBASEAPI HANDLE WINAPI GetProcessHeap(VOID);
@@ -1542,7 +1542,7 @@ WINBASEAPI UINT WINAPI GetSystemDirectoryA(LPSTR,UINT);
 WINBASEAPI UINT WINAPI GetSystemDirectoryW(LPWSTR,UINT);
 WINBASEAPI VOID WINAPI GetSystemInfo(LPSYSTEM_INFO);
 WINBASEAPI BOOL WINAPI GetSystemPowerStatus(LPSYSTEM_POWER_STATUS);
-#if (_WIN32_WINNT >= 0x0502)
+#if (_WIN32_WINNT >= 0x0501)
 WINBASEAPI BOOL WINAPI GetSystemRegistryQuota(PDWORD,PDWORD);
 #endif
 WINBASEAPI VOID WINAPI GetSystemTime(LPSYSTEMTIME);
@@ -1567,7 +1567,7 @@ WINBASEAPI UINT WINAPI GetTempFileNameW(LPCWSTR,LPCWSTR,UINT,LPWSTR);
 WINBASEAPI DWORD WINAPI GetTempPathA(DWORD,LPSTR);
 WINBASEAPI DWORD WINAPI GetTempPathW(DWORD,LPWSTR);
 WINBASEAPI BOOL WINAPI GetThreadContext(HANDLE,LPCONTEXT);
-#if (_WIN32_WINNT >= 0x0502)
+#if (_WIN32_WINNT >= 0x0501)
 WINBASEAPI BOOL WINAPI GetThreadIOPendingFlag(HANDLE,PBOOL);
 #endif
 WINBASEAPI int WINAPI GetThreadPriority(HANDLE);
